--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,29 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+  <custom-logged-header [title]="view | capitalize:true" ></custom-logged-header>
+
+  <ion-toolbar>
+    <ion-segment [(ngModel)]="view">
+      <ion-segment-button value="chats">
+        Chats
+      </ion-segment-button>
+      <ion-segment-button value="users">
+        Users
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
+
 </ion-header>
 
 <ion-content padding>
-  <button ion-button block (click)="onSignup()">Sign Up</button>
+  <div [ngSwitch]="view">
+    <ion-list *ngSwitchCase="'chats'">
+      <ion-item>Chats</ion-item>
+    </ion-list>
+    <ion-list *ngSwitchCase="'users'">
+      <button ion-item *ngFor="let user of users | async">
+        {{user.name}}
+      </button>
+    </ion-list>
+  </div>
+
 </ion-content>
