--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -3,13 +3,15 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list no-lines>
-    <ion-item *ngFor="let m of messages">{{m}}</ion-item>
-  </ion-list>
+
+  <message-box *ngFor="let m of viewMessages | async" [message]="m"
+               [isFromSender]="(m.userId === sender.$key)"></message-box>
+
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
+
     <ion-item no-lines>
       <ion-input type="text" (keyup.enter)="sendMessage(newMessage); newMessage=''" placeholder="Message..."
                  [(ngModel)]="newMessage"></ion-input>
@@ -17,5 +19,6 @@
         <ion-icon name="send"></ion-icon>
       </button>
     </ion-item>
+
   </ion-toolbar>
 </ion-footer>
